<resources>
    <string name="com.crashlytics.android.build_id">0b4082f0-dfe4-4a9a-9d37-8d2ab32bf6e2</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text"><g id="app_name">%1$s</g> requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text"><g id="app_name">%1$s</g>" won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet"><g id="app_name">%1$s</g>" won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text"><g id="app_name">%1$s</g> relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text"><g id="app_name">%1$s</g>" won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text"><g id="app_name">%1$s</g>" won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="album_chooser_text">Select Folders:</string>
    <string name="all_photos_folder_name">All folders</string>
    <string name="an_error_has_occured">An error has occured</string>
    <string name="app_locked_with_samsung">"MyRoll is locked with
Samsung Pass
Swipe to scan fingerprint"</string>
    <string name="backup_notif_text">"We'll be done soon"</string>
    <string name="backup_notif_title">Uploading</string>
    <string name="bad_photos_bar_done">No Bad Photos</string>
    <string name="cancel_label">Cancel</string>
    <string name="cancel_menu_item_label">Cancel</string>
    <string name="cancel_uploading_text">Cancel uploading</string>
    <string name="close">Close</string>
    <string name="confirm_label">Confirm</string>
    <string name="cover_toast_message">Changed moment cover</string>
    <string name="customize_folders">Custom scan</string>
    <string name="customize_folders_error">You must select at least one folder</string>
    <string name="customize_folders_title">Choose the folders you want to scan</string>
    <string name="delete_menu_item_label">Delete</string>
    <string name="delete_popup">"Deleting photos and videos in MyRoll will also delete them from your phone permanently.

Are you sure you want to continue?"</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="done_action">Good Job!</string>
    <string name="done_menu_item_label">Done</string>
    <string name="download_now">FREE DOWNLOAD</string>
    <string name="download_video_compression_extension_progress_title">Downloading video compression extension</string>
    <string name="drawer_action_edit">Edit</string>
    <string name="drawer_action_favorite">Favorite</string>
    <string name="drawer_action_hide">Hide</string>
    <string name="drawer_action_share">Share</string>
    <string name="edit_cover_set_cover">Set Cover</string>
    <string name="edit_location">Tap to edit location</string>
    <string name="edit_menu_item_label">Edit</string>
    <string name="edit_title">Tap to edit title</string>
    <string name="editing_cover_updated">Cover updated</string>
    <string name="editing_location_box_hint">Location</string>
    <string name="editing_moment_updated">Moment updated</string>
    <string name="editing_title_box_hint">Title</string>
    <string name="email_sharing_contacts">To</string>
    <string name="facebook_album_notification_text">Your Facebook album is ready</string>
    <string name="facebook_album_privacy_friends">Friends</string>
    <string name="facebook_album_privacy_friends_of_friends">Friends of friends</string>
    <string name="facebook_album_privacy_me">Only Me</string>
    <string name="facebook_album_privacy_public">Public</string>
    <string name="faq1_answer">Gallery Doctor uses MyRoll’s Gallery Curation Engine (GCE) to automatically identify photos with bad lighting, blurry shots, poor quality pictures, or photos that we may think are not very important to you.</string>
    <string name="faq1_question">How do you know what a bad photo is?</string>
    <string name="faq2_answer">Photos for review are photos that Gallery Doctor wasn’t able to identify as being bad or similar. That’s why we’re leaving it for you to decide. Gallery Doctor gets smarter based on your decisions - it learns which photos you don’t like and gets better at identifying them over time.</string>
    <string name="faq2_question">What are ‘photos for review’?</string>
    <string name="faq3_answer">Absolutely not. Your privacy is important to us! Gallery Doctor does not store nor share any of your photos.</string>
    <string name="faq3_question">Does Gallery Doctor share or upload my photos?</string>
    <string name="faq4_answer">Gallery Doctor will only delete the photos you choose to delete - it will never delete photos without your permission.</string>
    <string name="faq4_question">Will Gallery Doctor delete my photos?</string>
    <string name="faq5_answer">You can view them here: www.myroll.com/terms</string>
    <string name="faq5_question">Where can I see Gallery Doctor’s terms of service?</string>
    <string name="faq6_answer">If you’re experiencing any problems with Gallery Doctor, please reach out to us at helpdoc@myroll.com</string>
    <string name="faq6_question">Where can I report issues?</string>
    <string name="feedback_menu_item_label">Send Us Feedback</string>
    <string name="gallery_doctor_bad_hint_heading">What are bad photos?</string>
    <string name="gallery_doctor_bad_hint_text">Bad photos could be blurry, dark, poor quality, or simply ones we think you may find boring.</string>
    <string name="gallery_doctor_bad_photos_activity_title">Bad Photos</string>
    <string name="gallery_doctor_congrats">Congratulations!</string>
    <string name="gallery_doctor_congrats_text">%1$s photos cleaned &amp; %2$s freed up</string>
    <string name="gallery_doctor_duplicates_activity_title">Similar Photos</string>
    <string name="gallery_doctor_notifications">Notification settings</string>
    <string name="gallery_doctor_review_hint">"We're not sure about these photos. We will get smarter based on your decisions."</string>
    <string name="gallery_doctor_review_hint_delete">Swipe left to delete</string>
    <string name="gallery_doctor_review_hint_keep">Swipe right to keep</string>
    <string name="gallery_doctor_settings_facebook">Like us on Facebook</string>
    <string name="gallery_doctor_settings_invite_friend_summary">Love Gallery Doctor? Send your friends a link so they can share in the joy.</string>
    <string name="gallery_doctor_settings_large_number_of_photos">Large Number of Photos</string>
    <string name="gallery_doctor_settings_low_on_space">Device is low on space</string>
    <string name="gallery_doctor_settings_rate_us_title">Rate Gallery Doctor on Google Play</string>
    <string name="gallery_doctor_settings_twitter">Follow us on Twitter</string>
    <string name="gallery_doctor_settings_weekend">Weekend cleanup</string>
    <string name="gallery_doctor_show_us_love">Show us love</string>
    <string name="gd_to_myroll_cross_pormotion">"You've got some awesome photos! Enjoy them with MyRoll, the only gallery that identifies your best photos."</string>
    <string name="help_menu_item_label">Frequently Asked Questions</string>
    <string name="hints_all_caps_dismiss">DISMISS</string>
    <string name="settings_invite_friend_title">Ask your friends to check us out</string>
    <string name="share_menu_item_label">Share</string>
    <string name="intro_cloud_dropbox_connect">Coming soon</string>
    <string name="intro_cloud_heading">Cleanup your cloud photos</string>
    <string name="intro_cloud_picasa_connect">Google Photos (Picasa)</string>
    <string name="intro_cloud_skip">Later</string>
    <string name="intro_cloud_text">Connect your cloud photos to free up valuable storage</string>
</resources>