<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq1_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq1_answer" />
        <View android:id="@+id/Separator" android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq2_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq2_answer" />
        <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq3_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq3_answer" />
        <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq4_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq4_answer" />
        <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq5_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq5_answer" />
        <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq6_question" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/faq6_answer" />
    </LinearLayout>
</ScrollView>