<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/md_blue_grey_500" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:fb="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center_horizontal" android:id="@+id/intro_back" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/intro_clouds" android:scaleType="fitCenter" android:layout_centerHorizontal="true" />
    <ScrollView android:id="@+id/intro_login_texts" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="28.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/login_text_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/intro_cloud_heading" android:layout_centerHorizontal="true" />
            <TextView android:textSize="16.0sp" android:textColor="@color/md_grey_600" android:gravity="center_horizontal" android:id="@+id/login_text" android:paddingLeft="50.0dip" android:paddingTop="5.0dip" android:paddingRight="50.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/intro_cloud_text" android:layout_centerHorizontal="true" />
            <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/cloud_sign_in_picasa" android:background="@drawable/cloud_register_picasa_button" android:paddingLeft="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="10.0dip" android:text="@string/intro_cloud_picasa_connect" />
            <TextView android:enabled="false" android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/cloud_sign_in_dropbox" android:background="@drawable/cloud_register_dropbox_button" android:paddingLeft="50.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="50.0dip" android:layout_marginBottom="10.0dip" android:text="@string/intro_cloud_dropbox_connect" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="right" android:id="@+id/signin_skip" android:background="@drawable/blue_action_button_selector" android:paddingLeft="30.0dip" android:paddingTop="7.0dip" android:paddingRight="30.0dip" android:paddingBottom="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="55.0dip" android:layout_marginBottom="10.0dip" android:text="@string/intro_cloud_skip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>