<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/card_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" app:cardBackgroundColor="@color/md_light_blue_500" app:cardCornerRadius="4.0dip" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
        <LinearLayout android:gravity="center" android:id="@+id/top" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cross_mr_logo" android:scaleType="center" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/subtitle" android:paddingLeft="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gd_to_myroll_cross_pormotion" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginBottom="8.0dip">
            <com.devspark.robototextview.widget.RobotoTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/dismiss" android:background="@drawable/action_btn_selector_cards_blue" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:text="@string/hints_all_caps_dismiss" app:fontFamily="roboto" app:textWeight="medium" />
            <com.devspark.robototextview.widget.RobotoTextView android:textSize="14.0sp" android:textColor="@color/md_yellow_500" android:gravity="center_vertical" android:id="@+id/download" android:background="@drawable/action_btn_selector_cards_blue" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="36.0dip" android:layout_marginRight="16.0dip" android:text="@string/download_now" app:fontFamily="roboto" app:textWeight="medium" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>